--- a/SSP_online.Rmd
+++ b/SSP_online.Rmd
@@ -1,28 +1,28 @@
 ---
 title: "Online SSP - Estimation of sampling effort in community ecology"
-author: "Edlin Guerra-Castro, Juan Carlos Cajas, Juan José Cruz-Motta, Nuno Simoes and Maite Mascaro"
+author: "Edlin Guerra-Castro^1^, Juan Carlos Cajas^1^, Juan José Cruz-Motta^2^, Nuno Simoes^1^ and Maite Mascaro^1^."
 
-output: md_document
+output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+^1^Universidad Nacional Autónoma de México, ^2^Universidad de Puerto Rico  
 
-------------
-
-## RATIONALE OF SSP
+###  Rationale of **SSP**  
 
 **SSP** is an **R** package designed to estimate sample effort in studies of ecological communities using intensive sampling over several sets of simulated data. Our procedure is based on the previous definition of MultSE but eludes the double resampling over a unique pilot data set (Anderson and Santana-Garcon 2015). 
 The protocol in **SSP** consists of simulating several extensive data matrices that mimic some of the relevant ecological features of the community of interest using a pilot data set. For each simulated data, several sampling efforts are repeatedly executed and *MultSE* is calculated to each one. The mean value, 0.025 and 0.975 quantiles of *MultSE* for each sampling effort across all simulated data are then estimated and plotted. The mean values are standardized in relation to the lowest sampling effort (consequently, the worst precision), and an optimal sampling effort can be identified as that in which the increase in sample size do not improve the precision beyond a threshold value (e.g. 3 %).
 
 **SSP** includes seven functions: `assempar` for extrapolation of assemblage parameters using pilot data; `simdata` for simulation of several data sets based on extrapolated parameters; `datquality` for evaluation of plausibility of simulated data; `sampsd` for repeated estimations of *MultSE* for different sampling designs in simulated data sets; `summary_sd` for summarizing the behavior of *MultSE* for each sampling design across all simulated data sets, `ioptimum` for identification of the optimal sampling effort, and  `plot_ssp` to plot sampling effort vs *MultSE*.
 
-The SSP package is developed at <https://github.com/edlinguerra/SSP/>
+**SSP** is free and open source, distributed under GNU Public
+License ver. 2 (GPL-2). This package is available on the comprehensive R archive network (CRAN) <https://cran.r-project.org/web/packages/SSP/index.html> and is also hosted and developed in GitHub <https://github.com/edlinguerra/SSP>.
 
-------------
+------------------------------------------------------------------
 
-## THE ONLINE VERSION OF SSP
+### The online version of **SSP**
 
 The sequence of using **SSP** online is the same as in R. 
 
@@ -38,9 +38,9 @@ The sequence of using **SSP** online is the same as in R.
 
 This online version was built with [Shiny](https://shiny.rstudio.com/), and is hosted at [Shinyapps.io](https://https://www.shinyapps.io). This application has a limit of 25 active hours per month on this server, so depending on the use of the app during this month, it may not be able to run until the beginning of next month.
 
-------------
+------------------------------------------------------------------
 
-## CITATION of SSP
+### Citation
 
 Guerra-Castro, E. J., J. C. Cajas, F. N. Dias Marques Simoes, J. J. Cruz-Motta, and M. Mascaro. 2020. SSP: An R package to estimate sampling effort in studies of ecological communities. bioRxiv:2020.2003.2019.996991.
 
