--- a/SSP_online.Rmd
+++ b/SSP_online.Rmd
@@ -44,7 +44,7 @@ This online version was built with [Shiny](https://shiny.rstudio.com/), and is h
 
 ### Citation
 
-Guerra-Castro, E. J., J. C. Cajas, F. N. Dias Marques Simoes, J. J. Cruz-Motta, and M. Mascaro. 2020. SSP: An R package to estimate sampling effort in studies of ecological communities. bioRxiv:2020.2003.2019.996991.
+Guerra-Castro, E.J., Cajas, J.C., Simões, N., Cruz-Motta, J.J., and Mascaró, M. (2021). SSP: an R package to estimate sampling effort in studies of ecological communities. Ecography 44(4), 561-573. doi: https://doi.org/10.1111/ecog.05284.
 
 
 
